# Bluetooth-Heli

./: .gitmodules  README.md  app_linker.ld  battery.c  battery.h  controls.c  controls.h  error-handlers.c  extint.c  extint.h  gyro.c  gyro.h  irq-prio.h  led.c  led.h  main.c  meson.build  motors.c  motors.h  nfc.c  nfc.h  power.c  power.h  ppi-gpiote-map.h  ppi-map.h  resource-map.h  timer.c  timer.h  version.c  version.h.in
.github/workflows/: firmware.yml
